mangosdk/src/test/resources/valid/SubTestClass.java
import java.util.RandomAccess;

import org.mangosdk.spi.ProviderFor;

@ProviderFor(RandomAccess.class)
public class SubTestClass extends SuperClass {
	
}
